@@ -150,6 +150,12 @@ class WC_Subscriptions_Core_Plugin {
 
 		// Initialise the cache.
 		$this->cache = WCS_Cache_Manager::get_instance();
+
+		if ( class_exists( 'Automattic\WooCommerce\Blocks\Package' ) && version_compare( \Automattic\WooCommerce\Blocks\Package::get_version(), '4.4.0', '>' ) ) {
+			// When WooCommerceBlocks is loaded, set up the Integration class.
+			add_action( 'woocommerce_blocks_loaded', array( $this, 'setup_blocks_integration' ) );
+			add_action( 'woocommerce_blocks_loaded', array( 'WC_Subscriptions_Extend_Store_Endpoint', 'init' ) );
+		}
 	}
 
 	/**
@@ -190,12 +196,6 @@ class WC_Subscriptions_Core_Plugin {
 		// Only load privacy handling on WC applicable versions.
 		if ( class_exists( 'WC_Abstract_Privacy' ) ) {
 			new WCS_Privacy();
-		}
-
-		if ( class_exists( 'Automattic\WooCommerce\Blocks\Package' ) && version_compare( \Automattic\WooCommerce\Blocks\Package::get_version(), '4.4.0', '>' ) ) {
-			// When WooCommerceBlocks is loaded, set up the Integration class.
-			add_action( 'woocommerce_blocks_loaded', array( $this, 'setup_blocks_integration' ) );
-			add_action( 'woocommerce_blocks_loaded', array( 'WC_Subscriptions_Extend_Store_Endpoint', 'init' ) );
 		}
 	}
 
